--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@tiptap/extension-placeholder": "^2.0.4",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
+    "@types/mocha": "^10.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
