--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@tiptap/extension-blockquote": "^2.0.4",
+    "@tiptap/extension-heading": "^2.0.4",
+    "@tiptap/extension-link": "^2.0.4",
     "@tiptap/extension-placeholder": "^2.0.4",
+    "@tiptap/extension-underline": "^2.0.4",
+    "@tiptap/extension-youtube": "^2.0.4",
     "@tiptap/pm": "^2.0.4",
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
