--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
     "@vitejs/plugin-react": "^4.0.3",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tippy.js": "^6.3.7",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
     "vite-tsconfig-paths": "^4.2.0"
