--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/pm": "^2.0.4",
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
+    "@tiptap/suggestion": "^2.0.4",
     "@vitejs/plugin-react": "^4.0.3",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
