--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advaita-writer",
+  "name": "@advaita-tech/writer",
   "version": "0.0.1",
   "description": "An opionated open source text editor that intends to provide the best experience for long form writing on the internet",
   "type": "module",
@@ -7,14 +7,27 @@
   "author": "Vikram Thyagarajan <vikramthyagarajan92@gmail.com>",
   "license": "MIT",
   "private": false,
+  "exports": {
+    ".": {
+      "import": "./dist/main.js",
+      "require": "./dist/main.cjs"
+    }
+  },
+  "main": "./dist/main.cjs",
+  "module": "./dist/main.js",
+  "typings": "./dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.32.0",
     "@tiptap/extension-blockquote": "^2.0.4",
     "@tiptap/extension-heading": "^2.0.4",
     "@tiptap/extension-link": "^2.0.4",
@@ -36,8 +49,10 @@
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.4",
     "@types/cypress": "^1.1.3",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^20.8.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -47,6 +62,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "sass": "^1.63.6"
+    "rollup-plugin-typescript-paths": "^1.4.0",
+    "sass": "^1.63.6",
+    "tslib": "^2.6.2"
   }
 }
